// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > Snapshots > matches snapshot for 'first page' 1`] = `
<div>
  <div
    class="flex justify-between mt-4"
  >
    <button
      class="px-4 py-2 rounded bg-gray-300 cursor-not-allowed"
      disabled=""
    >
      Previous
    </button>
    <span>
      Page 
      1
       of 
      10
    </span>
    <button
      class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Pagination > Snapshots > matches snapshot for 'last page' 1`] = `
<div>
  <div
    class="flex justify-between mt-4"
  >
    <button
      class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600"
    >
      Previous
    </button>
    <span>
      Page 
      10
       of 
      10
    </span>
    <button
      class="px-4 py-2 rounded bg-gray-300 cursor-not-allowed"
      disabled=""
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Pagination > Snapshots > matches snapshot for 'middle page' 1`] = `
<div>
  <div
    class="flex justify-between mt-4"
  >
    <button
      class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600"
    >
      Previous
    </button>
    <span>
      Page 
      5
       of 
      10
    </span>
    <button
      class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600"
    >
      Next
    </button>
  </div>
</div>
`;
